# sonatype-resource-allocation-automation

./: .env.example  .gitignore  LICENCE  README.md  default_repo_urls.json  main.py  nexus_manager.py  pyproject.toml  test_paths.py
.github/workflows/: build-release.yml
config/: .env.example  organisations.json  organizations.json.example  package_manager.json  package_manager_config.json
nexus_manager/: __init__.py  core.py  error_handler.py  utils.py
scripts/: build_macos.sh
src/create_repo/: __init__.py  __main__.py  api.py  app_config.py  clients.py  common.py  config.py  core.py  logging_config.py  schemas.py  utils.py
src/resource_allocation/: __init__.py  __main__.py  api.py  clients.py  common.py  config.py
templates/: index.html  result.html
