[project]
name = "ctbc-create-repo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "blinker==1.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "dotenv==0.9.9",
    "flask==3.1.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "urllib3==2.4.0",
    "werkzeug==3.1.3",
    "pyinstaller>=6.0.0",
]
